--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,6 @@ node_js:
 before_script:
   - npm install -g .
 script:
+  - cd example && npm install && cd -
   - react-beaker build example
   - react-beaker publish example
