Modify a simple example

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,5 @@ before_script:
   - npm install -g .
 script:
   - cd example && npm install && cd -
-  - react-beaker build example
-  - react-beaker publish example
+  - inferno-beaker build example
+  - inferno-beaker publish example
