--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,7 @@ apply plugin: "application"
 apply plugin: "kotlin"
 
 sourceSets {
-  main.kotlin.srcDirs += "src/main"
+  main.kotlin.srcDirs += "src/orsql"
   test.kotlin.srcDirs += "src/test"
 }
 
