--- a/package.json
+++ b/package.json
@@ -1,19 +1,21 @@
 {
   "name": "1c",
-  "version": "6.4.4",
+  "version": "6.4.5",
   "bin": "./bin/1c",
   "dependencies": {
     "@types/node": "latest",
     "@types/object-path": "^0.9.28",
+    "autoprefixer": "^6.7.7",
     "copy-webpack-plugin": "^4.0.1",
-    "css-loader": "^0.26.2",
+    "css-loader": "^0.28.0",
     "html-webpack-plugin": "^2.28.0",
     "less": "^2.7.2",
-    "less-loader": "^2.2.3",
+    "less-loader": "^4.0.3",
     "object-path": "^0.11.4",
-    "style-loader": "^0.13.2",
+    "postcss-loader": "^1.3.3",
+    "style-loader": "^0.16.1",
     "ts-loader": "^2.0.1",
     "typescript": "^2.2.1",
-    "webpack": "^2.2.1"
+    "webpack": "^2.3.3"
   }
 }
