--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "src/index.js",
   "types": "src/index.d.ts",
   "scripts": {
-    "build": "tsc -d --noUnusedLocals --removeComments --strictNullChecks -p .",
-    "watch": "tsc -d --noUnusedLocals --removeComments --strictNullChecks -p . -w"
+    "build": "tsc -d -p .",
+    "watch": "tsc -d -p . -w"
   },
   "mvnDependencies": [
     "junit:junit:3.8.1",
