--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
   "name": "1c",
-  "version": "6.5.0",
+  "version": "6.5.1",
   "bin": "./bin/1c",
   "scripts": {
     "build": "tsc --noUnusedLocals --removeComments --strictNullChecks src/main.ts"
   },
   "dependencies": {
+    "@types/chalk": "^0.4.31",
     "@types/node": "latest",
     "@types/object-path": "^0.9.28",
     "autoprefixer": "^6.7.7",
+    "chalk": "^1.1.3",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.0",
     "html-webpack-plugin": "^2.28.0",
