--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "orsql",
-  "version": "0.1.3",
+  "version": "0.2.0",
   "repository": "github:wizawu/orsql",
   "main": "src/js/index.js",
   "types": "src/js/index.d.ts",
   "mvnDependencies": [
     "mysql:mysql-connector-java:6.0.5",
     "org.assertj:assertj-core:2.6.0",
-    "org.mariadb.jdbc:mariadb-java-client:1.5.7"
+    "org.mariadb.jdbc:mariadb-java-client:1.5.7",
+    "org.postgresql:postgresql:42.0.0"
   ]
 }
