--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "1c",
-  "version": "6.7.1",
+  "version": "6.7.2",
   "bin": "./bin/1c",
   "dependencies": {
     "@types/chalk": "^0.4.31",
     "@types/node": "latest",
     "@types/object-path": "^0.9.28",
+    "@types/source-map": "^0.5.0",
     "autoprefixer": "^6.7.7",
     "chalk": "^1.1.3",
     "copy-webpack-plugin": "^4.0.1",
@@ -16,6 +17,7 @@
     "less-loader": "^4.0.3",
     "object-path": "^0.11.4",
     "postcss-loader": "^1.3.3",
+    "source-map": "^0.5.6",
     "style-loader": "^0.16.1",
     "ts-loader": "^2.0.1",
     "typescript": "^2.2.1",
