--- a/example/package.json
+++ b/example/package.json
@@ -1,11 +1,10 @@
 {
   "dependencies": {
     "@types/chalk": "^0.4.31",
-    "chalk": "^1.1.3",
-    "mockxhr": "^1.3.0"
+    "chalk": "^1.1.3"
   },
   "mvnDependencies": [
-    "ro.pippo:pippo:1.3.0",
-    "org.tinylog:tinylog:1.2"
+    "com.sparkjava:spark-core:2.5.5",
+    "org.slf4j:slf4j-simple:1.7.21"
   ]
 }
