--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "orsql",
-  "version": "0.2.7",
+  "version": "0.2.8",
   "repository": "github:wizawu/orsql",
-  "main": "src/js/index.js",
-  "types": "src/js/index.d.ts",
+  "main": "src/index.js",
+  "types": "src/index.d.ts",
   "mvnDependencies": [
     "mysql:mysql-connector-java:6.0.5",
     "org.assertj:assertj-core:2.6.0",
