--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "1c",
-  "version": "6.8.5",
+  "version": "6.8.6",
   "bin": "./bin/1c",
   "dependencies": {
     "@types/chalk": "^0.4.31",
-    "@types/node": "latest",
+    "@types/node": "^7.0.12",
     "@types/object-path": "^0.9.28",
     "@types/source-map": "^0.5.0",
     "autoprefixer": "^6.7.7",
@@ -20,7 +20,7 @@
     "source-map": "^0.5.6",
     "style-loader": "^0.16.1",
     "ts-loader": "^2.0.1",
-    "typescript": "^2.2.1",
-    "webpack": "^2.3.3"
+    "typescript": "2.3.x",
+    "webpack": "^2.4.1"
   }
 }
