--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
   "name": "1c",
-  "version": "6.9.1",
+  "version": "6.10.0",
   "bin": "./bin/1c",
   "repository": "github:wizawu/1c",
   "dependencies": {
     "@types/chalk": "^0.4.31",
     "@types/node": "^7.0.14",
     "@types/object-path": "^0.9.28",
+    "@types/react": "^15.0.24",
+    "@types/react-dom": "^15.5.0",
     "@types/source-map": "^0.5.0",
+    "@types/webpack": "^2.2.15",
     "autoprefixer": "^6.7.7",
     "chalk": "^1.1.3",
     "copy-webpack-plugin": "^4.0.1",
@@ -17,6 +20,8 @@
     "less-loader": "^4.0.3",
     "object-path": "^0.11.4",
     "postcss-loader": "^1.3.3",
+    "react": "^15.5.4",
+    "react-dom": "^15.5.4",
     "source-map": "^0.5.6",
     "style-loader": "^0.16.1",
     "ts-loader": "^2.0.1",
