--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "1c",
-  "version": "7.1.0",
+  "version": "7.1.1",
   "bin": "./bin/1c",
   "repository": "github:wizawu/1c",
   "dependencies": {
@@ -19,6 +19,7 @@
     "less-loader": "^4.0.3",
     "object-path": "^0.11.4",
     "postcss-loader": "^1.3.3",
+    "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "source-map": "^0.5.6",
     "style-loader": "^0.16.1",
