--- a/package.json
+++ b/package.json
@@ -1,26 +1,26 @@
 {
   "name": "1c",
-  "version": "8.2.5",
+  "version": "8.3.0",
   "bin": "./bin/1c",
   "repository": "github:wizawu/1c",
   "dependencies": {
     "@types/chalk": "^0.4.31",
-    "@types/node": "^7.0.14",
+    "@types/node": "8.0.7",
     "@types/object-path": "^0.9.28",
     "@types/source-map": "^0.5.0",
-    "@types/webpack": "^2.2.15",
-    "autoprefixer": "^6.7.7",
-    "chalk": "^1.1.3",
-    "css-loader": "^0.28.0",
+    "@types/webpack": "3.0.1",
+    "autoprefixer": "7.1.1",
+    "chalk": "2.0.1",
+    "css-loader": "0.28.4",
     "json-loader": "^0.5.4",
     "less": "^2.7.2",
-    "less-loader": "^4.0.3",
+    "less-loader": "4.0.4",
     "object-path": "^0.11.4",
-    "postcss-loader": "^1.3.3",
+    "postcss-loader": "2.0.6",
     "source-map": "^0.5.6",
-    "style-loader": "^0.16.1",
-    "ts-loader": "^2.0.1",
-    "typescript": "2.3.x",
-    "webpack": "^2.4.1"
+    "style-loader": "0.18.2",
+    "ts-loader": "2.2.1",
+    "typescript": "2.4.1",
+    "webpack": "3.0.0"
   }
 }
