--- a/package.json
+++ b/package.json
@@ -1,16 +1,15 @@
 {
-  "name": "uds",
-  "version": "0.3.6",
-  "repository": "github:wizawu/uds",
+  "name": "jdbc-template",
+  "version": "0.5.0",
+  "repository": "github:wizawu/jdbc-template",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "mvnDependencies": [
+    "mysql:mysql-connector-java:6.0.6",
     "org.slf4j:slf4j-simple:1.7.25",
-    "mysql:mysql-connector-java:6.0.6"
+    "org.springframework:spring-jdbc:5.0.0.RELEASE"
   ],
   "devDependencies": {
-    "@types/chai": "^3.5.2",
-    "chai": "^3.5.0",
-    "lightest": "^0.1.1"
+    "lightest": "^0.1.2"
   }
 }
