--- a/package.json
+++ b/package.json
@@ -1,27 +1,27 @@
 {
   "name": "1c",
-  "version": "8.6.7",
+  "version": "8.7.0",
   "bin": "./bin/1c",
   "repository": "github:wizawu/1c",
   "dependencies": {
-    "@types/chalk": "0.4.31",
-    "@types/node": "8.0.26",
-    "@types/object-path": "0.9.29",
-    "@types/source-map": "0.5.1",
-    "@types/webpack": "3.0.10",
-    "autoprefixer": "7.1.3",
-    "chalk": "2.1.0",
-    "css-loader": "0.28.7",
-    "json-loader": "0.5.4",
-    "less": "2.7.2",
-    "less-loader": "4.0.5",
-    "object-path": "0.11.4",
-    "postcss-loader": "2.0.6",
-    "source-map": "0.5.7",
-    "style-loader": "0.18.2",
-    "ts-loader": "2.3.4",
-    "typescript": "2.5.2",
-    "url-loader": "0.5.9",
-    "webpack": "3.5.5"
+    "@types/chalk": "^0.4.31",
+    "@types/node": "^8.0.53",
+    "@types/object-path": "^0.9.29",
+    "@types/source-map": "^0.5.2",
+    "@types/webpack": "^3.8.1",
+    "autoprefixer": "^7.1.6",
+    "chalk": "2.0.x",
+    "css-loader": "^0.28.7",
+    "json-loader": "^0.5.7",
+    "less": "^2.7.3",
+    "less-loader": "^4.0.5",
+    "object-path": "^0.11.4",
+    "postcss-loader": "^2.0.8",
+    "source-map": "^0.6.1",
+    "style-loader": "^0.19.0",
+    "ts-loader": "^2.3.7",
+    "typescript": "^2.6.1",
+    "url-loader": "^0.6.2",
+    "webpack": "^3.8.1"
   }
 }
