--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "org.springframework:spring-jdbc:5.0.0.RELEASE"
   ],
   "devDependencies": {
+    "chai": "^4.1.2",
     "lightest": "^0.1.2"
   }
 }
