--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "1c",
   "version": "8.8.2",
-  "bin": "./bin/1c",
   "repository": "github:wizawu/1c",
+  "license": "MIT",
+  "bin": "./bin/1c",
   "dependencies": {
     "@types/chalk": "^0.4.31",
     "@types/node": "^9.4.5",
