--- a/build.tsconfig.json
+++ b/build.tsconfig.json
@@ -1,11 +1,14 @@
 {
   "compilerOptions": {
+    "allowJs": true,
+    "esModuleInterop": true,
     "jsx": "react",
     "lib": [
       "dom",
       "es2017"
     ],
     "noUnusedLocals": true,
+    "pretty": true,
     "removeComments": true,
     "skipLibCheck": true,
     "sourceMap": true,
