--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tooq",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "repository": "github:wizawu/tooq",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -12,7 +12,9 @@
   "devDependencies": {
     "chai": "^4.1.2",
     "lightest": "^0.1.2",
-    "lorem-ipsum": "^1.0.4",
-    "uuid": "^3.1.0"
+    "lorem-ipsum": "^1.0.4"
+  },
+  "dependencies": {
+    "uuid": "^3.2.1"
   }
 }
