--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "1c-std",
   "version": "0.0.1",
   "repository": "github:wizawu/1c-std",
-  "license": "MIT",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "mvnDependencies": [
     "com.google.javascript:closure-compiler:v20180319",
     "org.tinylog:tinylog:1.3.4"
