--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "mvnDependencies": [
-    "com.google.javascript:closure-compiler:v20180319",
-    "org.tinylog:tinylog:1.3.4"
+    "com.google.javascript:closure-compiler:v20180319"
   ],
   "dependencies": {
     "chalk": "^2.3.2"
