--- a/package.json
+++ b/package.json
@@ -8,9 +8,13 @@
     "@types/chalk": "^0.4.31",
     "@types/node": "^9.4.5",
     "@types/object-path": "^0.9.29",
-    "@types/source-map": "^0.5.7",
-    "@types/webpack": "^3.8.5",
+    "@types/source-map": "^0.5.2",
+    "@types/tapable": "^1.0.1",
+    "@types/webpack": "^4.1.3",
     "autoprefixer": "^7.2.6",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.4",
+    "babel-preset-env": "^1.6.1",
     "chalk": "2.1.x",
     "css-loader": "^0.28.9",
     "json-loader": "^0.5.7",
@@ -18,11 +22,10 @@
     "less-loader": "^4.0.5",
     "object-path": "^0.11.4",
     "postcss-loader": "^2.1.0",
-    "source-map": "^0.6.1",
     "style-loader": "^0.20.1",
-    "ts-loader": "^3.5.0",
+    "ts-loader": "^4.1.0",
     "typescript": "^2.7.1",
     "url-loader": "^0.6.2",
-    "webpack": "^3.11.0"
+    "webpack": "^4.5.0"
   }
 }
