--- a/package.json
+++ b/package.json
@@ -5,27 +5,25 @@
   "license": "MIT",
   "bin": "./bin/1c",
   "dependencies": {
-    "@types/chalk": "^0.4.31",
     "@types/node": "^9.4.5",
     "@types/object-path": "^0.9.29",
-    "@types/source-map": "^0.5.2",
     "@types/tapable": "^1.0.1",
     "@types/webpack": "^4.1.3",
-    "autoprefixer": "^7.2.6",
+    "autoprefixer": "^8.2.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.6.1",
-    "chalk": "2.1.x",
+    "chalk": "^2.3.2",
     "css-loader": "^0.28.9",
     "json-loader": "^0.5.7",
-    "less": "^2.7.3",
+    "less": "^3.0.1",
     "less-loader": "^4.0.5",
     "object-path": "^0.11.4",
     "postcss-loader": "^2.1.0",
     "style-loader": "^0.20.1",
     "ts-loader": "^4.1.0",
     "typescript": "^2.7.1",
-    "url-loader": "^0.6.2",
+    "url-loader": "^1.0.1",
     "webpack": "^4.5.0"
   }
 }
