--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "1c-std",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "repository": "github:wizawu/1c-std",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -8,8 +8,9 @@
     "com.google.javascript:closure-compiler:v20180319"
   ],
   "dependencies": {
+    "@types/chalk": "^0.4.31",
     "@types/core-js": "^0.9.46",
-    "chalk": "^2.3.2",
+    "chalk": "^1.1.3",
     "core-js": "^2.5.4"
   }
 }
