--- a/std/tsconfig.json
+++ b/std/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "allowJs": true,
     "esModuleInterop": true,
+    "experimentalDecorators": true,
     "jsx": "react",
     "lib": [
       "dom",
