--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
   "name": "1c",
-  "version": "8.11.8",
+  "version": "8.12.0",
   "repository": "github:wizawu/1c",
   "bin": "./bin/1c",
   "dependencies": {
+    "@types/filesize": "^3.6.0",
     "@types/node": "^9.4.5",
     "@types/object-path": "^0.9.29",
     "@types/webpack": "^4.1.3",
     "autoprefixer": "^8.2.0",
     "chalk": "^2.3.2",
     "css-loader": "^0.28.9",
+    "filesize": "^3.6.1",
     "json-loader": "^0.5.7",
     "less": "^2.7.3",
     "less-loader": "^4.0.5",
