--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "1c",
-  "version": "8.15.11",
+  "version": "8.16.0",
   "repository": "github:wizawu/1c",
+  "license": "MIT",
   "bin": "./bin/1c",
   "dependencies": {
     "@types/filesize": "^3.6.0",
@@ -18,8 +19,8 @@
     "object-path": "^0.11.4",
     "postcss-loader": "^2.1.5",
     "style-loader": "^0.20.1",
-    "ts-loader": "^4.3.1",
-    "typescript": "^2.9.1",
+    "ts-loader": "^4.5.0",
+    "typescript": "^3.0.1",
     "url-loader": "^1.1.0",
     "webpack": "^4.16.5"
   }
