--- a/polyfill/package.json
+++ b/polyfill/package.json
@@ -6,7 +6,6 @@
   "types": "dist/index.d.ts",
   "devDependencies": {
     "chai": "^4.1.2",
-    "lightest": "^0.1.2",
-    "lorem-ipsum": "^1.0.4"
+    "lightest": "^0.1.2"
   }
 }
