--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "@types/object-path": "^0.9.29",
     "@types/webpack": "^4.4.10",
     "autoprefixer": "^8.6.0",
-    "babel-minify-webpack-plugin": "^0.3.1",
     "chalk": "^2.4.1",
     "css-loader": "^0.28.9",
     "filesize": "^3.6.1",
@@ -20,6 +19,7 @@
     "object-path": "^0.11.4",
     "postcss-loader": "^2.1.5",
     "style-loader": "^0.20.1",
+    "terser-webpack-plugin": "^1.1.0",
     "ts-loader": "^4.5.0",
     "typescript": "^3.0.1",
     "url-loader": "^1.1.0",
