--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -2,4 +2,4 @@ theme: jekyll-theme-merlot
 title: 1c
 description: Full-featured TypeScript on JVM
 google_analytics: UA-74127852-5
-show_downloads: true
+show_downloads: false
