--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,4 +1,4 @@
-theme: jekyll-theme-merlot
+theme: jekyll-theme-cayman
 title: 1c
 description: Full-featured TypeScript on JVM
 google_analytics: UA-74127852-5
