--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "bin": "./bin/1c",
   "dependencies": {
     "@types/filesize": "^3.6.0",
-    "@types/node": "^9.6.40",
+    "@types/node": "^10.14.17",
     "@types/object-path": "^0.9.29",
     "@types/webpack": "^4.4.32",
     "autoprefixer": "^8.6.0",
@@ -24,5 +24,9 @@
     "typescript": "^3.6.2",
     "url-loader": "^1.1.2",
     "webpack": "^4.39.3"
+  },
+  "devDependencies": {
+    "mixin-deep": ">=1.3.2",
+    "set-value": ">=2.0.1"
   }
 }
