--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "1c",
-  "version": "8.24.0",
+  "version": "11.0.0-alpha",
   "repository": "github:wizawu/1c",
   "license": "MIT",
   "bin": "./bin/1c",
@@ -9,6 +9,7 @@
     "@types/node": "^9.6.55",
     "@types/object-path": "^0.9.29",
     "@types/webpack": "^4.41.7",
+    "@types/which": "^1.3.2",
     "autoprefixer": "^8.6.0",
     "chalk": "^2.4.2",
     "css-loader": "^0.28.9",
@@ -23,7 +24,8 @@
     "ts-loader": "^4.5.0",
     "typescript": "3.8.x",
     "url-loader": "^1.1.2",
-    "webpack": "^4.41.6"
+    "webpack": "^4.41.6",
+    "which": "^2.0.2"
   },
   "devDependencies": {
     "mixin-deep": ">=1.3.2",
