--- a/package.json
+++ b/package.json
@@ -1,32 +1,17 @@
 {
-  "name": "1c",
-  "version": "1.1.1",
-  "repository": "github:wizawu/1c",
+  "name": "tyrian",
+  "version": "9.0.0-beta1",
+  "repository": "github:wizawu/tyrian",
   "license": "MIT",
-  "bin": "./bin/1c",
-  "dependencies": {
-    "@types/filesize": "^3.6.0",
-    "@types/node": "^9.6.55",
-    "@types/object-path": "^0.9.29",
-    "@types/webpack": "^4.41.7",
-    "autoprefixer": "^8.6.0",
-    "chalk": "^2.4.2",
-    "css-loader": "^0.28.9",
-    "filesize": "^3.6.1",
-    "fork-ts-checker-webpack-plugin": "^1.6.0",
-    "less": "2.x.x",
-    "less-loader": "^4.0.5",
-    "object-path": "^0.11.4",
-    "postcss-loader": "^2.1.5",
-    "style-loader": "^0.20.1",
-    "terser-webpack-plugin": "^1.4.3",
-    "ts-loader": "^4.5.0",
-    "typescript": "3.8.x",
-    "url-loader": "^1.1.2",
-    "webpack": "^4.41.6"
+  "bin": "bin/tyrian",
+  "scripts": {
+    "test": "echo"
   },
-  "devDependencies": {
-    "mixin-deep": ">=1.3.2",
-    "set-value": ">=2.0.1"
-  }
+  "dependencies": {
+    "antlr4": "^4.9.0",
+    "chalk": "^4.1.0",
+    "commander": "^6.2.0",
+    "typescript": "^4.0.5"
+  },
+  "devDependencies": {}
 }
