--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "license": "MIT",
   "bin": "bin/tyrian",
   "scripts": {
-    "test": "echo"
+    "build": "tsc -p . -d --outDir dist",
+    "watch": "tsc -p . -d --outDir dist -w",
+    "test": "mocha tests/*.test.js"
   },
   "dependencies": {
     "antlr4": "^4.9.0",
@@ -13,5 +15,8 @@
     "commander": "^6.2.0",
     "typescript": "^4.0.5"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "@types/node": "^12.19.9",
+    "mocha": "^8.2.1"
+  }
 }
