--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,12 @@
 {
   "compilerOptions": {
-    "target": "es5",
-    "module": "commonjs",
-    "strict": true,
     "esModuleInterop": true,
+    "module": "commonjs",
     "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true
-  }
+    "strict": true,
+    "target": "es5"
+  },
+  "include": [
+    "src/**/*.ts"
+  ]
 }
