--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "build": "tsc -p . -d --outDir dist",
     "watch": "tsc -p . -d --outDir dist -w",
-    "test": "mocha tests/*.test.js"
+    "test": "mocha tests/*.test.js",
+    "lint": "eslint --ext .ts --fix src"
   },
   "dependencies": {
     "antlr4": "^4.9.0",
@@ -17,6 +18,9 @@
   },
   "devDependencies": {
     "@types/node": "^12.19.9",
+    "@typescript-eslint/eslint-plugin": "^4.9.1",
+    "@typescript-eslint/parser": "^4.9.1",
+    "eslint": "^7.15.0",
     "mocha": "^8.2.1"
   }
 }
