--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "bin": "bin/tyrian",
   "scripts": {
-    "antlr": "cd g4 && antlr4 -Dlanguage=JavaScript -visitor -o ../src/javap Javap.g4",
+    "antlr": "cd misc/g4 && antlr4 -Dlanguage=JavaScript -visitor -o $INIT_CWD/src/javap Javap.g4",
     "build": "tsc -p . -d --outDir dist",
     "watch": "tsc -p . -d --outDir dist -w",
     "test": "mocha tests/*.test.js",
@@ -22,6 +22,7 @@
     "@typescript-eslint/eslint-plugin": "^4.9.1",
     "@typescript-eslint/parser": "^4.9.1",
     "eslint": "^7.15.0",
-    "mocha": "^8.2.1"
+    "mocha": "^8.2.1",
+    "node-html-parser": "^2.0.2"
   }
 }
