--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "antlr4": "^4.9.0",
     "chalk": "^4.1.0",
     "commander": "^6.2.0",
+    "jszip": "^3.6.0",
     "redent": "^3.0.0",
     "typescript": "^4.0.5"
   },
   "devDependencies": {
+    "@types/jszip": "^3.4.1",
     "@types/node": "^12.19.9",
     "@types/redent": "^3.0.1",
     "@typescript-eslint/eslint-plugin": "^4.9.1",
