--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "bin": "bin/tyrian",
   "scripts": {
-    "antlr": "cd misc/g4 && antlr4 -Dlanguage=JavaScript -visitor -o $INIT_CWD/src/javap Javap.g4",
+    "antlr": "cd misc/g4 && antlr4 -Dlanguage=JavaScript -visitor -o $INIT_CWD/src/grammar Javap.g4",
     "build": "tsc -d --outDir dist -p .",
     "watch": "tsc -d --outDir dist -p . -w",
     "test": "mocha tests/*.test.js",
@@ -20,6 +20,7 @@
     "typescript": "^4.0.5"
   },
   "devDependencies": {
+    "@types/antlr4": "^4.7.2",
     "@types/jszip": "^3.4.1",
     "@types/node": "^12.19.9",
     "@types/redent": "^3.0.1",
