--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "tsc -d --outDir dist -p .",
     "watch": "tsc -d --outDir dist -p . -w",
     "test": "mocha -V",
-    "lint": "eslint --ext .ts --ignore-pattern '/src/grammar/*' --fix src"
+    "lint": "eslint --ext .ts --ignore-pattern '/src/grammar/*' --fix src @types"
   },
   "dependencies": {
     "antlr4": "^4.9.0",
