--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "devDependencies": {
     "@types/antlr4": "^4.7.2",
+    "@types/glob": "^7.1.3",
     "@types/jszip": "^3.4.1",
     "@types/node": "^12.19.9",
     "@types/redent": "^3.0.1",
