Generate lambda types

--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "antlr": "cd src/grammar && antlr4 -Dlanguage=JavaScript -visitor Javap.g4",
     "build": "tsc -d --outDir dist -p .",
     "watch": "tsc -d --outDir dist -p . -w",
-    "types": "eslint --ext .ts --fix @types",
+    "test": "mocha -V",
     "lint": "eslint --ext .ts --ignore-pattern '/src/grammar/*' --fix src",
-    "test": "mocha -V"
+    "lint:types": "eslint --ext .ts --fix @types"
   },
   "dependencies": {
     "antlr4": "^4.9.0",
