--- a/.eslintrc
+++ b/.eslintrc
@@ -13,6 +13,7 @@
       2
     ],
     "@typescript-eslint/no-empty-interface": 0,
+    "@typescript-eslint/no-explicit-any": 0,
     "@typescript-eslint/no-unused-vars": [
       "error",
       {
@@ -20,6 +21,7 @@
         "varsIgnorePattern": "T"
       }
     ],
+    "@typescript-eslint/triple-slash-reference": 0,
     "array-bracket-spacing": [
       "error",
       "never"
