--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "chalk": "^4.1.0",
     "commander": "^6.2.0",
     "jszip": "^3.6.0",
+    "prompts": "^2.4.0",
     "redent": "^3.0.0",
     "ts-loader": "^8.0.17",
     "typescript": "^4.2.2",
