--- a/.eslintrc
+++ b/.eslintrc
@@ -8,6 +8,9 @@
   ],
   "rules": {
     "@typescript-eslint/adjacent-overload-signatures": 0,
+    "@typescript-eslint/explicit-function-return-type": [
+      "error"
+    ],
     "@typescript-eslint/indent": [
       "error",
       2
