Add integration test for nashorn

--- a/test/.gitignore
+++ b/test/.gitignore
@@ -1,6 +1,6 @@
 .gradle/
 /*.json
 build.gradle
-integration/*.js
-integration/package-lock.json
+integration/**/*.js
+integration/**/package-lock.json
 lib/
