Update README and docs

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,5 +1,4 @@
 theme: jekyll-theme-hacker
-title: 1c
+title: tyrian
 description: Full-featured TypeScript on JVM
-google_analytics: UA-74127852-5
 show_downloads: false
