--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "bin": "bin/tyrian",
   "scripts": {
     "antlr": "cd src/parser/javap && antlr4 -Dlanguage=JavaScript -visitor Javap.g4",
-    "build": "tsc -d --outDir dist -p .",
-    "watch": "tsc -d --outDir dist -p . -w",
+    "build": "tsc -p .",
+    "watch": "tsc -p . -w",
     "types": "test $JAVAP && node src/jdk/allclasses.js",
     "test": "cd test && mocha --timeout 5000 unit/*.js unit/**/*.js",
     "lint": "eslint --ignore-pattern '/src/parser/javap/*' --fix src test/unit",
