--- a/package.json
+++ b/package.json
@@ -17,13 +17,15 @@
     "antlr4": "4.8.x",
     "chalk": "^4.1.0",
     "commander": "^6.2.0",
+    "dotenv": "^10.0.0",
     "glob": "^7.1.6",
     "jszip": "^3.7.0",
     "prompts": "^2.4.0",
     "redent": "^3.0.0",
     "ts-loader": "^8.0.17",
-    "typescript": "^4.4.2",
-    "webpack": "^5.24.2"
+    "typescript": "^4.4.4",
+    "webpack": "^5.24.2",
+    "which": "^2.0.2"
   },
   "devDependencies": {
     "@types/antlr4": "^4.7.2",
@@ -32,7 +34,7 @@
     "@typescript-eslint/eslint-plugin": "^4.9.1",
     "@typescript-eslint/parser": "^4.9.1",
     "eslint": "^7.15.0",
-    "mocha": "^8.2.1",
+    "mocha": "^9.1.3",
     "node-html-parser": "^2.0.2"
   }
 }
