--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "lint:types": "eslint --ext .ts --fix @types"
   },
   "dependencies": {
-    "antlr4": "4.8.x",
+    "antlr4": "^4.9.3",
     "chalk": "^4.1.0",
     "commander": "^6.2.0",
     "dotenv": "^10.0.0",
