--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tyrian",
-  "version": "9.2.0",
+  "version": "9.3.0",
   "repository": "github:wizawu/tyrian",
   "license": "MIT",
   "bin": "bin/tyrian",
@@ -14,7 +14,7 @@
     "lint:types": "eslint --ext .ts --fix @types"
   },
   "dependencies": {
-    "antlr4": "^4.9.3",
+    "antlr4": "4.10.*",
     "chalk": "^4.1.0",
     "commander": "^6.2.0",
     "dotenv": "^10.0.0",
@@ -23,7 +23,7 @@
     "prompts": "^2.4.0",
     "redent": "^3.0.0",
     "ts-loader": "^8.0.17",
-    "typescript": "^4.5.5",
+    "typescript": "4.7.*",
     "webpack": "^5.24.2",
     "which": "^2.0.2"
   },
