--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tyrian",
-  "version": "9.3.0",
+  "version": "9.3.2",
   "repository": "github:wizawu/tyrian",
   "license": "MIT",
   "bin": "bin/tyrian",
@@ -23,7 +23,7 @@
     "prompts": "^2.4.0",
     "redent": "^3.0.0",
     "ts-loader": "^8.0.17",
-    "typescript": "4.7.*",
+    "typescript": "4.8.x",
     "webpack": "^5.24.2",
     "which": "^2.0.2"
   },
