--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,11 @@
-dist: bionic
+dist: jammy
 language: java
 jdk:
   - openjdk11
 node_js:
   - "16"
 script:
+  - gradle --version
   - npm install
   - npm run lint
   - npm run build
