--- a/package.json
+++ b/package.json
@@ -14,13 +14,11 @@
     "lint:types": "eslint --ext .ts --fix @types"
   },
   "dependencies": {
-    "antlr4": "4.10.*",
+    "antlr4": "4.10.x",
     "chalk": "^4.1.0",
     "commander": "^6.2.0",
-    "dotenv": "^10.0.0",
     "glob": "^7.1.6",
     "jszip": "^3.7.0",
-    "prompts": "^2.4.0",
     "redent": "^3.0.0",
     "ts-loader": "^8.0.17",
     "typescript": "4.9.x",
