--- a/package.json
+++ b/package.json
@@ -3,36 +3,34 @@
   "version": "11.0.0",
   "repository": "github:wizawu/tyrian",
   "license": "MIT",
-  "bin": "bin/tyrian",
+  "bin": "./bin/tyrian",
   "scripts": {
     "antlr": "cd src/parser/javap && antlr4 -Dlanguage=JavaScript -visitor Javap.g4",
-    "build": "tsc -p .",
-    "watch": "tsc -p . -w",
+    "build": "esbuild --bundle src/main.ts --outdir=dist --platform=node",
+    "watch": "esbuild --bundle src/main.ts --outdir=dist --platform=node --watch",
     "types": "test $JAVAP && node src/jdk/allclasses.js",
     "test": "cd test && mocha --timeout 5000 unit/*.js unit/**/*.js",
     "lint": "eslint --ignore-pattern '/src/parser/javap/*' --fix src test/unit",
     "lint:types": "eslint --ext .ts --fix @types"
   },
-  "dependencies": {
-    "antlr4": "4.10.x",
-    "chalk": "^4.1.0",
-    "commander": "^6.2.0",
-    "glob": "^7.1.6",
-    "jszip": "^3.7.0",
-    "redent": "^3.0.0",
-    "ts-loader": "^8.0.17",
-    "typescript": "4.9.x",
-    "webpack": "^5.24.2",
-    "which": "^2.0.2"
-  },
   "devDependencies": {
     "@types/antlr4": "^4.7.2",
     "@types/glob": "^7.1.3",
-    "@types/node": "^12.19.9",
+    "@types/node": "^16.18.11",
     "@typescript-eslint/eslint-plugin": "^4.9.1",
     "@typescript-eslint/parser": "^4.9.1",
+    "antlr4": "4.10.x",
+    "chalk": "^4.1.0",
+    "commander": "^6.2.0",
+    "esbuild": "^0.16.15",
     "eslint": "^7.15.0",
+    "glob": "^7.1.6",
+    "jszip": "^3.7.0",
     "mocha": "^9.2.0",
-    "node-html-parser": "^2.0.2"
+    "node-html-parser": "^2.0.2",
+    "redent": "^3.0.0",
+    "ts-loader": "^8.0.17",
+    "typescript": "4.9.x",
+    "which": "^2.0.2"
   }
 }
