--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,13 +3,12 @@
     "allowJs": true,
     "declaration": true,
     "esModuleInterop": true,
-    "module": "commonjs",
     "noImplicitAny": false,
-    "outDir": "dist",
+    "moduleResolution": "node",
     "resolveJsonModule": true,
     "skipLibCheck": true,
     "strict": true,
-    "target": "es6"
+    "target": "es2020"
   },
   "include": [
     "src/**/*.ts"
