--- a/package.json
+++ b/package.json
@@ -9,25 +9,28 @@
     "build": "esbuild --bundle src/main.ts --outdir=dist --platform=node",
     "watch": "esbuild --bundle src/main.ts --outdir=dist --platform=node --watch",
     "types": "test $JAVAP && node src/jdk/allclasses.js",
-    "lint": "eslint --ignore-pattern '/src/parser/javap/*' --fix src test/unit",
+    "lint": "prettier -w src/*.ts src/**/*.ts",
     "lint:types": "eslint --ext .ts --fix @types"
   },
   "devDependencies": {
     "@types/antlr4": "^4.7.2",
     "@types/glob": "^7.1.3",
     "@types/node": "^16.18.11",
-    "@typescript-eslint/eslint-plugin": "^4.9.1",
-    "@typescript-eslint/parser": "^4.9.1",
     "antlr4": "4.10.x",
     "chalk": "^4.1.0",
     "commander": "^6.2.0",
     "esbuild": "^0.16.15",
-    "eslint": "^7.15.0",
     "glob": "^7.1.6",
     "jszip": "^3.7.0",
     "node-html-parser": "^2.0.2",
+    "prettier": "^2.8.3",
     "redent": "^3.0.0",
     "typescript": "4.9.x",
     "which": "^2.0.2"
+  },
+  "prettier": {
+    "arrowParens": "avoid",
+    "printWidth": 120,
+    "semi": false
   }
 }
