--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
     "node-html-parser": "^2.0.2",
     "prettier": "^2.8.3",
     "redent": "^3.0.0",
-    "typescript": "4.9.x",
-    "which": "^2.0.2"
+    "typescript": "4.9.x"
   },
   "prettier": {
     "arrowParens": "avoid",
