--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tyrian",
-  "version": "11.0.1",
+  "version": "11.0.2",
   "repository": "github:wizawu/tyrian",
   "license": "MIT",
   "bin": "./bin/tyrian",
@@ -12,10 +12,13 @@
     "lint": "prettier -w src/*.ts src/**/*.ts"
   },
   "devDependencies": {
+    "@babel/core": "^7.20.12",
+    "@babel/preset-env": "^7.20.2",
     "@types/antlr4": "^4.7.2",
     "@types/glob": "^7.1.3",
     "@types/node": "^18.11.18",
     "antlr4": "4.10.x",
+    "babel-plugin-transform-es2017-object-entries": "^0.0.5",
     "chalk": "^4.1.0",
     "commander": "^6.2.0",
     "glob": "^7.1.6",
