--- a/package.json
+++ b/package.json
@@ -1,32 +1,33 @@
 {
   "name": "tyrian",
-  "version": "11.0.2",
+  "version": "11.1.0",
   "repository": "github:wizawu/tyrian",
   "license": "MIT",
   "bin": "./bin/tyrian",
   "scripts": {
     "antlr": "cd src/parser/javap && antlr4 -Dlanguage=JavaScript -visitor Javap.g4",
-    "types": "esbuild src/jdk/index.ts --bundle --platform=node | node - && prettier -w @types/**/*.ts",
-    "build": "esbuild src/main.ts --bundle --outdir=dist --platform=node --external:esbuild",
-    "watch": "esbuild src/main.ts --bundle --outdir=dist --platform=node --external:esbuild --watch",
+    "types": "rollup --plugin typescript,commonjs,json,node-resolve --generatedCode es5 -f cjs src/jdk/index.ts | node - && prettier -w @types/**/*.ts",
+    "build": "rollup --plugin typescript,commonjs,json,node-resolve --generatedCode es5 -f cjs -e rollup -d dist src/main.ts",
+    "watch": "rollup --plugin typescript,commonjs,json,node-resolve --generatedCode es5 -f cjs -e rollup -d dist src/main.ts -w --no-watch.clearScreen",
     "lint": "prettier -w src/*.ts src/**/*.ts"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.12",
-    "@babel/preset-env": "^7.20.2",
+    "@rollup/plugin-commonjs": "^24.0.1",
+    "@rollup/plugin-json": "^6.0.0",
+    "@rollup/plugin-node-resolve": "^15.0.1",
+    "@rollup/plugin-typescript": "^11.0.0",
     "@types/antlr4": "^4.7.2",
     "@types/glob": "^7.1.3",
     "@types/node": "^18.11.18",
     "antlr4": "4.10.x",
-    "babel-plugin-transform-es2017-object-entries": "^0.0.5",
-    "chalk": "^4.1.0",
+    "colorette": "^2.0.19",
     "commander": "^6.2.0",
     "glob": "^7.1.6",
     "jszip": "^3.10.0",
     "node-html-parser": "^2.0.2",
     "prettier": "^2.8.3",
     "redent": "^3.0.0",
-    "typescript": "4.9.x"
+    "tslib": "^2.5.0"
   },
   "prettier": {
     "arrowParens": "avoid",
@@ -34,6 +35,7 @@
     "semi": false
   },
   "dependencies": {
-    "esbuild": "^0.17.4"
+    "rollup": "^3.14.0",
+    "typescript": "^4.9.5"
   }
 }
