--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,6 @@
 {
   "compilerOptions": {
-    "allowJs": true,
-    "declaration": true,
+    "allowJs": false,
     "esModuleInterop": true,
     "moduleResolution": "node",
     "noImplicitAny": false,
