--- a/.github/workflows/build-jdk11-node18.yml
+++ b/.github/workflows/build-jdk11-node18.yml
@@ -17,7 +17,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-java@v3
         with:
-          java-version: "11"
+          java-version: "11.0.18+10"
           distribution: "temurin"
       - uses: gradle/gradle-build-action@v2
         with:
@@ -27,3 +27,8 @@ jobs:
           node-version: "18.x"
       - run: npm install
       - run: npm run build
+      - working-directory: example
+        run: |
+          ../bin/tyrian install
+          ../bin/tyrian build main.ts
+          ../bin/tyrian run main.js
