--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
     "jszip": "^3.10.0",
     "node-html-parser": "^2.0.2",
     "prettier": "^2.8.3",
-    "redent": "^3.0.0",
-    "tslib": "^2.5.0"
+    "redent": "^3.0.0"
   },
   "prettier": {
     "arrowParens": "avoid",
@@ -38,6 +37,7 @@
     "@rollup/plugin-node-resolve": "^15.0.1",
     "@rollup/plugin-typescript": "^11.0.0",
     "rollup": "^3.14.0",
+    "tslib": "^2.5.0",
     "typescript": "^4.9.5"
   }
 }
