--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tyrian",
-  "version": "11.1.4",
+  "version": "11.2.0",
   "repository": "github:wizawu/tyrian",
   "license": "MIT",
   "bin": "./bin/tyrian",
@@ -37,6 +37,7 @@
     "@rollup/plugin-node-resolve": "^15.0.1",
     "@rollup/plugin-typescript": "^11.0.0",
     "rollup": "^3.14.0",
+    "rollup-plugin-less": "^1.1.3",
     "tslib": "^2.5.0",
     "typescript": "^4.9.5"
   }
