--- a/package.json
+++ b/package.json
@@ -39,6 +39,6 @@
     "rollup": "^3.14.0",
     "rollup-plugin-less": "^1.1.3",
     "tslib": "^2.5.0",
-    "typescript": "^5.2.2"
+    "typescript": "5.3.x"
   }
 }
